--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </li>
         <li class="plugin-item">
           <span class="plugin-title">snakegame.zip</span>
-          <a href="downloads/snakegame.zip" class="download-button" download>
+          <a href="downloads/snake.zip" class="download-button" download>
             Download
           </a>
         </li>
